GNOME Bugzilla – Bug 645765
gsd-automount: Don't load properties from ConsoleKit
Last modified: 2011-04-26 09:24:59 UTC
These the system bus to log a warning, since CK dbus policy denies property reads. <deny send_destination="org.freedesktop.ConsoleKit" send_interface="org.freedesktop.DBus.Properties" />
Created attachment 184309 [details] [review] gsd-automount: Don't load properties from ConsoleKit
Makes sense to me. We certainly don't need any session properties here.
Attachment 184309 [details] pushed as a913ed4 - gsd-automount: Don't load properties from ConsoleKit