gsd-automount: Don't load properties from ConsoleKit

These the system bus to log a warning, since CK dbus policy denies
property reads.

    <deny send_destination="org.freedesktop.ConsoleKit"
          send_interface="org.freedesktop.DBus.Properties" />

https://bugzilla.gnome.org/show_bug.cgi?id=645765